command system update 2