@@ -6,8 +6,8 @@ import net.dv8tion.jda.core.JDABuilder;
 import net.dv8tion.jda.core.entities.Game;
 import net.dv8tion.jda.core.hooks.ListenerAdapter;
 import org.reflections.Reflections;
+import support.kajstech.kajbot.command.Command;
 import support.kajstech.kajbot.command.CommandManager;
-import support.kajstech.kajbot.command.ICommand;
 import support.kajstech.kajbot.handlers.ConfigHandler;
 import support.kajstech.kajbot.handlers.CustomCommandsHandler;
 import support.kajstech.kajbot.handlers.KeywordHandler;
@@ -34,11 +34,11 @@ public class Bot {
 
         //Loading commands
         Reflections cmdReflections = new Reflections("support.kajstech.kajbot.command.commands");
-        Set<Class<? extends ICommand>> allCommands = cmdReflections.getSubTypesOf(ICommand.class);
-        for (Class<? extends ICommand> command : allCommands) {
+        Set<Class<? extends Command>> allCommands = cmdReflections.getSubTypesOf(Command.class);
+        for (Class<? extends Command> command : allCommands) {
             try {
-                CommandManager.addCommand(command.newInstance());
-            } catch (InstantiationException | IllegalAccessException e) {
+                CommandManager.addCommand(command.getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
                 e.printStackTrace();
             }
         }
